--- a/client/src/PortfolioContainer/Home/Profile.css
+++ b/client/src/PortfolioContainer/Home/Profile.css
@@ -79,3 +79,32 @@
     transform: scale(1.07);
     transition: 1s ease-out;
 }
+
+/*( little social media icons */
+.colz .colz-icon i{
+    color: white;
+    padding: 8px;
+    padding-left: 0px;
+}
+
+.colz .colz-icon i:hover {
+transform: scale(1.5);
+}
+
+@media screen and (max-width: 1110px) {
+    .profile-picture{
+        margin: 0 0px 80px
+    }
+
+    .profile-details-name {
+        font-size: 20px;
+    }
+    .profile-details-role .primary-text {
+        font-size: 12px;
+    }
+    .profile-options .btn {
+        width: 120px;
+        padding: 11px 0;
+        z-index: 700;
+    }
+}
