--- a/client/src/PortfolioContainer/Home/Profile.css
+++ b/client/src/PortfolioContainer/Home/Profile.css
@@ -108,3 +108,34 @@ transform: scale(1.5);
         z-index: 700;
     }
 }
+
+@media screen and (max-width: 910px) {
+    .profile-picture {
+        height: 320px;
+        width: 320px;
+        margin: 0 0 0 4px;
+    }
+}
+
+@media screen and (max-width: 810px) {
+    .profile-picture{
+        margin: 0 !important;
+    }
+    .profile-parent{ 
+        flex-direction: column-reverse;
+        margin: 40px 0 0 0;
+    }
+    .profile-options {
+        display: flex;
+        justify-content: space-between;
+    }
+    .profile.details {
+       margin: 25px 0 0; 
+    }
+    .profile-options .highlighted-btn {
+        margin: 0 !important;
+    }
+    .profile-options .profile-details-role {
+        text-align: center;
+    }
+}
