--- a/client/src/PortfolioContainer/Home/Profile/Profile.css
+++ b/client/src/PortfolioContainer/Home/Profile/Profile.css
@@ -5,7 +5,7 @@
     justify-content: center;
     height: 10%;
     min-height: fit-content;
-    background-image: url(../../assets/Home/bg.jpg);
+
 }
 
 .profile-parent {
@@ -68,7 +68,7 @@
 .profile-picture-background{ 
     height: 92%;
     width: 92%;
-    background-image: url(../../assets/Home/me.png);
+    background-image: url(../../../assets/Home/me.png);
     background-size: cover;
     border-radius: 50%;
     background-repeat: no-repeat;
@@ -139,3 +139,4 @@ transform: scale(1.5);
         text-align: center;
     }
 }
+
