quick hamburg menu debug

--- a/client/src/PortfolioContainer/Home/Header/Header.css
+++ b/client/src/PortfolioContainer/Home/Header/Header.css
@@ -90,7 +90,7 @@
         margin: 0px 10px;
         color: var(--white);
     }
-    .show-hamburger-option {
+    .show-hamburger-options {
         left: 0;
         opacity: 1;
     }
